# mimetic

./: AUTHORS  CMakeLists.txt  COPYING  ChangeLog  LICENSE  Makefile.am  Makefile.in  README  README.md  build-android-cmake.sh  build-ios-cmake.sh  configure  configure.in
cmake/Toolchains/: android.toolchain.cmake
doc/: Makefile.am  Makefile.in  README  doxygen.config.in  header.html
examples/: CMakeLists.txt  Makefile.am  Makefile.in  README  TODO  b64.cxx  buildidx.cxx  catpart.cxx  cmdline.cxx  cmdline.h  engine.cxx  engine.h  exbin.cxx  mbox.cxx  mm.cxx  mm.h  qp.cxx  search.cxx  smime2xml.cxx  smimestruct.cxx  structure.cxx  test.msg
mimetic/: CMakeLists.txt  Makefile.in  body.cxx  body.h  circular_buffer.h  config.h.in  config_win32.h.in  contentid.cxx  contenttype.cxx  libconfig.h  message.cxx  message.h  mimeentity.cxx  mimeentity.h  mimeentitylist.h  strutils.cxx  tokenizer.h  utils.cxx  utils.h  version.cxx
mimetic/codec/: Makefile.in  base64.cxx  base64.h  other_codecs.h
mimetic/os/: Makefile.in  directory.h  file_iterator.h  fileop.cxx  fileop.h  mmfile.cxx  mmfile.h  stdfile.cxx  stdfile.h
mimetic/parser/: Makefile.in  itparser.h
mimetic/rfc822/: Makefile.in  addresslist.cxx  datetime.cxx  field.cxx  group.cxx  header.h  mailbox.cxx  messageid.cxx
test/: Makefile.am  Makefile.in  cutee.cxx  cutee.h  runtest.cxx  t.base64.cxx  t.base64.h  t.circular_buffer.cxx  t.circular_buffer.h  t.codec.cxx  t.codec.h  t.composite.cxx  t.composite.h  t.contentdisposition.cxx  t.contentdisposition.h  t.contenttype.cxx  t.contenttype.h  t.directory.h  t.fieldparam.cxx  t.fieldparam.h  t.file.h  t.find_bm.cxx  t.find_bm.h  t.mimemessage.h  t.parser.h  t.qp.cxx  t.qp.h  t.rfc822.cxx  t.rfc822.h  t.strutils.h  t.tokenizer.cxx  t.tokenizer.h  t.tree.h  t.utils.h  t.version.h  test.msg  test3.msg
win32/: Makefile.am  Makefile.in  buildvc.cmd  libmimetic.sln  libmimetic.vcproj
